--- a/index.html
+++ b/index.html
@@ -1,78 +1,64 @@
-<!DOCTYPE html>
-<html ng-app="SyntheaApp" >
-<head>
-	<!-- <title>Synthea</title> -->
-	<meta charset="UTF-8">
-	<base href="./" />
-	<!-- <script src="./lib/angular-1.3.4/angular.min.js"></script> -->
-	<!-- <script src="./synthea.js"></script> -->
-	<script>
-		window.angular = require('angular');
-		const angularMaterial = require('angular-material');
-		const synthea = require('./scripts/SyntheaApp.js');
-	</script>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Synthea by avanwinkle</title>
 
-	<link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
-	<link rel="stylesheet" href="assets/synthea.css">
-	<link rel="icon"
-	      type="image/png"
-	      href="assets/synthea_icon_cropped.png" />
-	<link rel="icon" type="image/x-icon" href="assets/synthea_flat.ico" />
-</head>
-<body ng-controller="SyntheaController as sVm">
-<!--{{master | json}}-->
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Synthea</h1>
+        <p>A Soundboard for Unscripted Theater</p>
+
+        <p class="view"><a href="https://github.com/avanwinkle/synthea">View the Project on GitHub <small>avanwinkle/synthea</small></a></p>
 
 
-<div id="page-header" layout="row">
-	<div flex="none">
-		<img id="logo" src="assets/synthea_icon_cropped.png" />
-	</div>
+        <ul>
+          <li><a href="https://github.com/avanwinkle/synthea/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/avanwinkle/synthea/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/avanwinkle/synthea">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-	<div id="title" flex>
-		<span id="title-text"
-		ng-bind="sVm.project.config.name"></span>
-	</div>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
-	<div flex="none">
-		<md-button ng-click="sVm.stopAll()">Stop All</md-button>
-	</div>
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-</div>
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<div id="page-tabs" ng-if="sVm.project.master.pages.length>1">
-	<div class="page-tab"
-	ng-repeat="page in sVm.project.master.pages" >
-		<button class="tab" ng-bind="page"
-		ng-click="sVm.selectPage(page)"
-		ng-class="{'current': page == sVm.currentPage}"></button>
-	</div>
-</div>
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
-<div id="page-container">
-		<div class="column" ng-repeat="column in sVm.currentColumns">
-			<div class="column-header" ng-bind="column"></div>
-			<div class="column-container">
-				<div class="button-container"
-				ng-repeat="cue in sVm.currentButtons | filter: {column: column}">
-					<button class="button"
-					aria-label="{{::cue.name}}"
-					ng-disabled="!cue.file"
-					ng-bind="::cue.name"
-					ng-click="sVm.selectCue(cue)"
-					ng-class="{'current': cue == sVm.currentTrack}"
-					title="{{::cue.tooltip}}"></button>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<!--
-<div id="player">
-	<div id="current_track">{{sVm.currentTrack.name}}</div>
-	<div id="current_track_source" ng-show="sVm.currentTrack">{{sVm.currentTrack.column}}, {{sVm.currentPage}}</div>
-	<audio id="audioplayer" src="" controls></audio>
-</div>
--->
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-</body>
+<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/avanwinkle">avanwinkle</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
