--- a/index.html
+++ b/index.html
@@ -28,30 +28,81 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="synthea-soundboard" class="anchor" href="#synthea-soundboard" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SYNTHEA Soundboard</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Short for SYNthetic THEater Audio, Synthea is a customizable soundboard program designed for dynamic playback of
+dialogue, sound effects, and music in unscripted environments. It was written for use in improvised theater, but
+is suitable in any live performance where pre-programmed cues are not sufficient.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Synthea is an Electron-based Angular-powerd program that generates a tabbed software soundboard for realtime playback of dialogue,
+sound effects, and music. Playback options include simultaneous, sequential, and crossfade; cues can be looped or
+randomized; hotkeys can be bound, and much more. Key features include:</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<ul>
+<li>Distinct Playback Behaviors for Dialogue, Sound Effects, and Music Modes</li>
+<li>"Lock" Toggle to Build Cue List and Delay Playback Until Unlock</li>
+<li>Intuitive Tab-Based Interface to Store Hundreds of Unique Cues</li>
+<li>Multiple Variations of a Cue Playable Randomly from a Single Cue Button</li>
+<li>Board Variations Toggled On-The-Fly for Multiple Board Identities</li>
+<li>Programmable Hot-Keys for Instant Access to Common Cues</li>
+<li>Modifier Key Support for Easy Hot-Key Iterations</li>
+<li>Segmentable Intro, Outro, and Loop Parameters for Gapless Looping</li>
+</ul>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>Synthea was originally written in Python with wxPython, PyGame, and VLC. It is
+now being actively ported (here in this repo!) to a web application wrapped by
+Electron.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h1>
+<a id="how-synthea-works" class="anchor" href="#how-synthea-works" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How Synthea Works</h1>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>Synthea uses project subfolders to offer a list of projects. Each project folder contains configuration files and audio files as described below:</p>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Each project folder has a Config file that defines its name, type (dialog, sound effects, or music), and its optional playback modes. The types are distinguished by the following characteristics:</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<pre><code> DIALOG: Concurrent cues are queued and played back sequentially
+ EFFECTS: Concurrent cues are played simultaneously
+ MUSIC: New cues fade in as the previous cue is faded out
+</code></pre>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Additionally, each project configuration file can declare multiple 'modes', which are subdirectories that contain mirrors of all the cue files. These modes allow on-the-fly switching between audio sets while maintaining the project's board layout.</p>
+
+<p>Each project folder also contains a Layout file, which is a delimited text file that defines the hierarchy of pages,
+groups, effects buttons, and cue files for that soundboard. Multiple cue files can be assigned to the same button;
+in such cases, a random file will be selected each time the button is queued. Buttons can include the following options:</p>
+
+<pre><code> NOCACHE: The sound file is not cached in RAM until the button is queued
+ BUFFER: The sound file is never cached in RAM, only streamed through
+ LOOP: The sound file will playback indefinitely in a seamless loop
+ LOOPEXT: The sound file will play and seamlessly begin looping another file
+</code></pre>
+
+<p>Finally, each project has an optional Hotkeys file, where global keyboard events can be programmed. These events will override the built-in hotkeys, and are a simple delimited list of keyboard event codes (triggers) and effect button names (actions).</p>
+
+<h1>
+<a id="why-synthea-exists" class="anchor" href="#why-synthea-exists" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Why Synthea Exists</h1>
+
+<p>In unscripted theater, a sound board operator needs access to effects and music in ways that
+scripted theater software cannot accomodate.</p>
+
+<p>As a tech improviser, I once needed the ability to provide realtime, unscripted conversation
+between performers onstage and an artificial intelligence controlled in the booth, and so SYNTHEA was
+created as means to seamlessly queue up a wide selection of pre-recorded sentence fragments and play them
+back sequentially on demand.</p>
+
+<p>SYNTHEA has since expanded to provide customized music and sound effects boards for numerous other
+unscripted plays and improv performances, and continues to be developed for better and broader functionality.
+It is still in its infancy, but for those willing and able to learn it, I hope it proves a useful tool.</p>
+
+<p>For more information visit <a href="http://www.synthea.org">www.synthea.org</a></p>
+
+<h1>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h1>
+
+<p>Installation instructions to follow after full Electron migration</p>
+
+<p>(C) 2011-2013 Anthony van Winkle with contributions by Dan Posluns</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/avanwinkle">avanwinkle</a></p>
